update / clean up

--- a/exercises/02_rag.ipynb
+++ b/exercises/02_rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "06b3d5e0",
+   "id": "53330a31",
    "metadata": {},
    "source": [
     "# Exercise 2: RAG\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c9bad2",
+   "id": "ebb6282c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b1af4b",
+   "id": "3f8d7cd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09eab23e",
+   "id": "c604fb33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b222512f",
+   "id": "19188217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,7 @@
     "        return None\n",
     "\n",
     "    # Exercise 2.1: Load all PDFs from the folder\n",
+    "    # Hint: Use `PyMuPDFLoader(file).load()`\n",
     "    for file in glob.glob(f\"{pdf_folder}/*.pdf\"):\n",
     "        # <solution>\n",
     "        loader = PyMuPDFLoader(file)\n",
@@ -94,12 +95,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6167d3f2",
+   "id": "9d1464f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def retrieve(vectorstore, query: str):\n",
     "    # Exercise 2.4: Implement a retriever using the vectorstore.\n",
+    "    # Hint: Use `vectorstore.as_retriever()` and `.invoke(query)`\n",
     "    # <solution>\n",
     "    retriever = vectorstore.as_retriever()\n",
     "    matching_docs = retriever.invoke(query)\n",
@@ -110,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f442bc41",
+   "id": "d13023e9",
    "metadata": {},
    "outputs": [],
    "source": [
