--- a/exercises/03_tool_calling.ipynb
+++ b/exercises/03_tool_calling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f1e797ef",
+   "id": "0fdcd2b2",
    "metadata": {},
    "source": [
     "# Exercise 3: Tool Calling\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab1c2e5c",
+   "id": "6b9f0fd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f527ca4d",
+   "id": "c64270b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cc42cbe",
+   "id": "4d120524",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2d48f9d",
+   "id": "23bcf579",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9581bd3c",
+   "id": "aa6e83ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "645b72c4",
+   "id": "ece4399c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
     "    tools = [get_weather]\n",
     "    tools_by_name = {t.name: t for t in tools}\n",
     "\n",
-    "    # Exercise 3.2: Bind the tool to the model\n",
+    "    # Exercise 3.2: Bind the tool to the model. Use the .bind_tools method.\n",
     "    # <solution>\n",
     "    model_with_tools = model.bind_tools(tools)\n",
     "    # </solution>\n",
