--- a/exercises/04_react.ipynb
+++ b/exercises/04_react.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d72df345",
+   "id": "897ece80",
    "metadata": {},
    "source": [
     "# Exercise 4: ReAct Agent\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "534b41d2",
+   "id": "62ac0df7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae1841a9",
+   "id": "f173674f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30a453bf",
+   "id": "ca43aa59",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6282d719",
+   "id": "fcb24ea3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80c717fe",
+   "id": "1950b3cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2e06c7f",
+   "id": "a76b8cef",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdde7b05",
+   "id": "954af36d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd5837c2",
+   "id": "be8154b5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c145b45",
+   "id": "05cefec8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,12 +259,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ba35656",
+   "id": "d641b74e",
    "metadata": {},
    "outputs": [],
    "source": [
     "search_query = \"What is Altana?\"\n",
-    "# Exercise 4.10: Build and invoke the agent.\n",
+    "# Exercise 4.9: Build and invoke the agent.\n",
     "# <solution>\n",
     "agent = build_agent([web_search])\n",
     "messages = [HumanMessage(content=search_query)]\n",
@@ -277,13 +277,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d934e5be",
+   "id": "bd77f693",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "source": [
-    "# Exercise 4.9: Let's use the functional API\n",
+    "## Demo: Functional API\n",
     "\n",
+    "LangGraph also supports a functional API that relies on decorators.\n",
+    "This can be more intuitive for python developers.\n",
     "\n",
     "\n",
     "def build_agent_func(tools):\n",
@@ -299,7 +301,6 @@
     "    from langgraph.graph import add_messages\n",
     "\n",
     "    # Step 2: Define model node\n",
-    "\n",
     "    @task\n",
     "    def call_llm(messages: list[BaseMessage]):\n",
     "        \"\"\"LLM decides whether to call a tool or not\"\"\"\n",
@@ -320,7 +321,7 @@
     "        return tool.invoke(tool_call)\n",
     "\n",
     "    # Step 4: Define agent\n",
-    "    @entrypoint()\n",
+    "    @entrypoint(checkpointer=checkpointer)\n",
     "    def agent(messages: list[BaseMessage]):\n",
     "        model_response = call_llm(messages).result()\n",
     "\n",
@@ -344,7 +345,6 @@
     "\n",
     "agent = build_agent_func([add, multiply, divide])\n",
     "Invoke\n",
-    "messages = [HumanMessage(content=\"Add 3 and 4.\")]\n",
     "for chunk in agent.stream(messages, stream_mode=\"updates\"):\n",
     "    print(chunk)\n",
     "    print(\"\\n\")"
@@ -352,26 +352,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f783268",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "source": [
-    "# Exercise 4.10: Try asking what your last query was. How can we get this to work?\n",
-    "Hint: We need a checkpointer: https://docs.langchain.com/oss/python/langgraph/persistence#checkpoints\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "30c69aa7",
+   "id": "b7af5a3b",
    "metadata": {},
    "source": [
-    "# Exercise 4.11 (Bonus): Try out other architetural patterns.\n",
+    "# Exercise 4.10 (Bonus): Persistence\n",
     "\n",
-    "  For example:\n",
-    "      * add a router\n",
-    "      * add HITL (explicit confirmation of tool calls)\n",
-    "      * structured output"
+    "Try asking what your last query was. How can we get this to work?\n",
+    "Hint: We need a checkpointer: https://docs.langchain.com/oss/python/langgraph/persistence#checkpoints\n",
+    "\n",
+    "<solution>\n",
+    "from langchain.checkpointers.memory import InMemorySaver\n",
+    "from langchain.agents import create_agent\n",
+    "\n",
+    "checkpointer = InMemorySaver()\n",
+    "agent = create_agent(tools, checkpointer=checkpointer)\n",
+    "\n",
+    "pass a config with a thread_id to the agent\n",
+    "response_1 = agent.invoke({\n",
+    "    \"messages\": [HumanMessage(content=\"Hello my name is Tore.\")]}, \n",
+    "    config={\"configurable\": {\"thread_id\": \"1\"}})\n",
+    "response_1[\"messages\"][-1].pretty_print()\n",
+    "\n",
+    "pass the same thread_id to continue the conversation\n",
+    "response_2 = agent.invoke({\n",
+    "    \"messages\": [HumanMessage(content=\"What is my name?\")]}, \n",
+    "    config={\"configurable\": {\"thread_id\": \"1\"}})\n",
+    "response_2[\"messages\"][-1].pretty_print()\n",
+    "</solution>"
    ]
   }
  ],
