--- a/exercises/05_mcp.ipynb
+++ b/exercises/05_mcp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd5afc04",
+   "id": "5a82e1ee",
    "metadata": {},
    "source": [
     "# Exercise 5: Intro to MCP\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "805ac73f",
+   "id": "693f638c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b9f92c3",
+   "id": "ed6bfd77",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5baca469",
+   "id": "a570af93",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a26a48c8",
+   "id": "11f5fb39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a870ca",
+   "id": "d19a3619",
    "metadata": {},
    "source": [
     "# Deployment\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3abe4cae",
+   "id": "2277b5f7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d294aac5",
+   "id": "c0e1851c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2951ab25",
+   "id": "a4e6a460",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53268df5",
+   "id": "f1988c67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,14 +145,22 @@
     "# which we will use below.\n",
     "#\n",
     "# The host is just the url you are at currently.\n",
+    "#\n",
+    "# This client requires OAuth with a service principal for machine-to-machine (M2M) auth.\n",
+    "# Follow the insturctions here in order to create a SP, grant the SP query permissions on your app and then mint a client id and secret.\n",
+    "# https://docs.databricks.com/aws/en/dev-tools/auth/oauth-m2m\n",
     "\n",
     "custom_mcp_server_workspace_client = WorkspaceClient(\n",
-    "    host=\"TODO\",\n",
-    "    client_id=\"TODO\",\n",
-    "    client_secret=\"TODO\",\n",
+    "    host=\"<workspace-url>\",\n",
+    "    client_id=\"<client-id>\",\n",
+    "    client_secret=\"<client-secret>\"\n",
     "    auth_type=\"oauth-m2m\",  # Enables service principal authentication\n",
     ")\n",
     "\n",
+    "#\n",
+    "# Exercise 5.1: Configure the MCP Client with the server details\n",
+    "# You need to fill in the `name` and `url` for the DatabricksMCPServer.\n",
+    "# For this exercise, assume we have a server named \"MyServer\" running at the provided URL.\n",
     "databricks_mcp_client = DatabricksMultiServerMCPClient(\n",
     "    [\n",
     "        # DatabricksMCPServer(\n",
@@ -160,9 +168,11 @@
     "        #     url=f\"{host}/api/2.0/mcp/functions/system/ai\",\n",
     "        # ),\n",
     "        DatabricksMCPServer(\n",
-    "            name=\"TODO\",\n",
-    "            url=\"TODO\",\n",
+    "            # <solution>\n",
+    "            name=\"MyServer\",\n",
+    "            url=\"http://0.0.0.0:8000/sse\",\n",
     "            workspace_client=custom_mcp_server_workspace_client,\n",
+    "            # </solution>\n",
     "        ),\n",
     "    ]\n",
     ")"
@@ -170,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4813710",
+   "id": "0548da74",
    "metadata": {},
    "source": [
     "\n",
@@ -180,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f30f004",
+   "id": "c37862ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eff57ce",
+   "id": "5e2f9c93",
    "metadata": {},
    "outputs": [],
    "source": [
