--- a/exercises/06_code_execution.ipynb
+++ b/exercises/06_code_execution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd846ee0",
+   "id": "2e24c609",
    "metadata": {},
    "source": [
     "# Exercise 6: Code Execution vs Tool Calling\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcc3a02c",
+   "id": "980a2fad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ba5f14",
+   "id": "f8869cf9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -59,6 +59,9 @@
     "interpreter(\"import matplotlib; matplotlib.use('Agg'); import matplotlib.pyplot as plt\")\n",
     "\n",
     "\n",
+    "# Exercise 6.1: Define the `exec_python` tool\n",
+    "# This tool should take a code string, execute it using the `interpreter`, and return the output.\n",
+    "# <solution>\n",
     "@tool\n",
     "def exec_python(code: str):\n",
     "    \"\"\"\n",
@@ -72,17 +75,24 @@
     "        return f\"Stdout:\\n{str(interpreter.state['_print_outputs'])}\\nOutput: {output}\"\n",
     "    except InterpreterError as e:\n",
     "        return f\"There was an error: {e}\"\n",
+    "# </solution>\n",
     "\n",
     "\n",
+    "# Exercise 6.2: Create the agent\n",
+    "# Use `create_agent` with the model and tools.\n",
+    "# <solution>\n",
     "tools = [exec_python]\n",
-    "agent = create_agent(model=llm, tools=tools)"
+    "agent = create_agent(model=llm, tools=tools)\n",
+    "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07131a1f",
-   "metadata": {},
+   "id": "407b73ef",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# Let's test the agent\n",
@@ -97,6 +107,8 @@
     "    }\n",
     ")\n",
     "\n",
+    "\n",
+    "\n",
     "# Print the message history\n",
     "for msg in response[\"messages\"]:\n",
     "    if type(msg) is AIMessage and msg.tool_calls:\n",
@@ -105,6 +117,140 @@
     "        print(\"=\" * 50)\n",
     "    print(msg.content)\n",
     "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebea24bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 6.3: Implement Memory Tools\n",
+    "# We want to give the agent a \"long-term memory\" to store results and errors.\n",
+    "# We will use LangGraph's InMemoryStore with semantic search capabilities.\n",
+    "#\n",
+    "# 1. Initialize `memory_store` with the embeddings.\n",
+    "# 2. Implement `create_memory(key: str, value: str, category: str)` to add to the store.\n",
+    "# 3. Implement `recall_memory(query: str)` to search the store using semantic search.\n",
+    "\n",
+    "import uuid\n",
+    "from langgraph.store.memory import InMemoryStore\n",
+    "from llm import embeddings, embedding_dimensions\n",
+    "\n",
+    "# <solution>\n",
+    "# Initialize the store with the embedding model and dimensions\n",
+    "memory_store = InMemoryStore(\n",
+    "    index={\n",
+    "        \"embed\": embeddings,\n",
+    "        \"dims\": embedding_dimensions,\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "@tool\n",
+    "def create_memory(key: str, value: str, category: str = \"result\"):\n",
+    "    \"\"\"\n",
+    "    Stores a piece of information in long-term memory.\n",
+    "    Useful for saving results to avoid re-calculation, or errors to avoid repeating them.\n",
+    "    \n",
+    "    Args:\n",
+    "        key: A short descriptive key or title for the memory.\n",
+    "        value: The content/details to remember.\n",
+    "        category: The category of memory. Must be either 'result' (for analysis findings) or 'error' (for bugs/issues).\n",
+    "    \"\"\"\n",
+    "    if category not in [\"result\", \"error\"]:\n",
+    "        return \"Error: Category must be either 'result' or 'error'.\"\n",
+    "\n",
+    "    # Namespace based on category\n",
+    "    namespace = (\"global\", category)\n",
+    "    memory_id = str(uuid.uuid4())\n",
+    "    \n",
+    "    memory_store.put(\n",
+    "        namespace,\n",
+    "        memory_id,\n",
+    "        {\"key\": key, \"value\": value, \"category\": category}\n",
+    "    )\n",
+    "    return f\"Stored memory {memory_id} in category '{category}'\"\n",
+    "\n",
+    "@tool\n",
+    "def recall_memory(query: str, category: str = \"result\"):\n",
+    "    \"\"\"\n",
+    "    Retrieves information from long-term memory based on a query.\n",
+    "    \n",
+    "    Args:\n",
+    "        query: Search term to find relevant memories using semantic search.\n",
+    "        category: The category to search in. use 'result' for past analysis, 'error' for coding patterns/restrictions.\n",
+    "    \"\"\"\n",
+    "    namespace = (\"global\", category)\n",
+    "    # Search for top 3 most relevant memories\n",
+    "    results = memory_store.search(namespace, query=query, limit=3)\n",
+    "    \n",
+    "    if not results:\n",
+    "        return f\"No relevant memories found in category '{category}'.\"\n",
+    "    \n",
+    "    formatted_results = []\n",
+    "    for item in results:\n",
+    "        content = item.value\n",
+    "        formatted_results.append(f\"[{content['category']}] {content['key']}: {content['value']}\")\n",
+    "        \n",
+    "    return \"Found memories:\\n\" + \"\\n\".join(formatted_results)\n",
+    "# </solution>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abac00af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 6.4: Create an Agent with Memory\n",
+    "# Create a new agent that has access to `exec_python`, `create_memory`, and `recall_memory`.\n",
+    "# Ask it to perform a calculation, store the result, and then in a follow-up (\"later\"), ask it to recall it.\n",
+    "\n",
+    "# <solution>\n",
+    "memory_tools = [exec_python, create_memory, recall_memory]\n",
+    "memory_agent = create_agent(model=llm, tools=memory_tools)\n",
+    "# </solution>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "402a2590",
+   "metadata": {
+    "lines_to_next_cell": 3
+   },
+   "outputs": [],
+   "source": [
+    "# Test the memory agent\n",
+    "print(\"--- Testing Memory Agent ---\")\n",
+    "\n",
+    "# Step 1: Perform a task and remember the result\n",
+    "response1 = memory_agent.invoke(\n",
+    "    {\n",
+    "        \"messages\": [\n",
+    "            HumanMessage(\n",
+    "                \"Calculate the mean age of passengers in the Titanic dataset (variable 'df'). \"\n",
+    "                \"Store the result in your memory so you don't have to calculate it again.\"\n",
+    "            )\n",
+    "        ]\n",
+    "    }\n",
+    ")\n",
+    "print(response1[\"messages\"][-1].content)\n",
+    "\n",
+    "# Step 2: Ask a question that requires recalling the memory\n",
+    "print(\"\\n--- Testing Recall ---\")\n",
+    "response2 = memory_agent.invoke(\n",
+    "    {\n",
+    "        \"messages\": [\n",
+    "            HumanMessage(\n",
+    "                \"Do you remember the mean age of the passengers? Check your memory.\"\n",
+    "            )\n",
+    "        ]\n",
+    "    }\n",
+    ")\n",
+    "print(response2[\"messages\"][-1].content)"
    ]
   }
  ],
