--- a/exercises/07_image_understanding.ipynb
+++ b/exercises/07_image_understanding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be58efcb",
+   "id": "d740f58d",
    "metadata": {},
    "source": [
     "# Image Understanding Chatbot\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "659e649b",
+   "id": "5f0b5bb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf75c6b",
+   "id": "22abc387",
    "metadata": {},
    "source": [
     "Today we'll be working with Databricks LLMs that support vision capabilities.\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c52c824",
+   "id": "03d26007",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18112bbb",
+   "id": "b19f1bf7",
    "metadata": {},
    "source": [
     "Now it's your turn. Solve the exercises below.\n",
@@ -83,11 +83,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac2b2fa1",
+   "id": "9df7ac5a",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f1c3ac1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.1:\n",
+    "# Exercise 7.1:\n",
     "#\n",
     "# Build a simple chatbot that can understand images using langchain.\n",
     "# The user should provide an image URL or path at the beginning.\n",
@@ -138,7 +148,7 @@
     "        if user_input.lower() in [\"exit\", \"quit\"]:\n",
     "            break\n",
     "\n",
-    "        # Exercise 1.1: Add user message and invoke model\n",
+    "        # Exercise 7.1.1: Add user message and invoke model\n",
     "        # <solution>\n",
     "        chat_history.append(HumanMessage(content=user_input))\n",
     "        response = model.invoke(chat_history)\n",
@@ -150,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc8e642e",
+   "id": "5daa49d9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -163,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dafaea82",
+   "id": "7529dc3c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -172,10 +182,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "516ffcf0",
+   "id": "45a01603",
    "metadata": {},
    "source": [
-    "## Exercise 1.2 (Bonus):\n",
+    "## Exercise 7.2 (Bonus):\n",
     "Use streamlit to build a chat interface with image upload.\n",
     "\n",
     "To test it, deploy the app.py to databricks apps using the UI."
@@ -184,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42bfb1b8",
+   "id": "ddee9450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afdcbf00",
+   "id": "b02dc728",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcb6d6d0",
+   "id": "20e7aebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,12 +228,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8925622f",
+   "id": "d5c6765f",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%writefile streamlit_app_01_vision/app.py\n",
-    "# <solution>\n",
     "import streamlit as st\n",
     "from databricks_langchain import ChatDatabricks\n",
     "from langchain_core.messages import HumanMessage, AIMessage\n",
