--- a/exercises/01_chatbot.ipynb
+++ b/exercises/01_chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "09a71286",
+   "id": "bece6004",
    "metadata": {},
    "source": [
     "# Building a Chatbot\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc636488",
+   "id": "d57c39f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeba2c2e",
+   "id": "c39c15ca",
    "metadata": {},
    "source": [
     "Today we'll be working with Databricks LLMs.\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fbb189b",
+   "id": "8a07530b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48e8ddb6",
+   "id": "fef9c743",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -65,17 +65,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f938c81f",
+   "id": "6b18e246",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dc1d7c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.1:\n",
+    "# Exercise 1: Console Chatbot\n",
     "#\n",
     "# Build a simple chatbot using langchain and the Chat Completions API.\n",
     "#\n",
     "# Fill in the lines inside <solution></solution>.\n",
     "#\n",
-    "\n",
     "\n",
     "def chat_shell():\n",
     "    # Initialize chat history\n",
@@ -91,7 +100,8 @@
     "        chat_history.append(HumanMessage(content=user_input))\n",
     "        # </solution>\n",
     "\n",
-    "        # Exercise 1.2: Invoke th model to get a response.\n",
+    "        # Exercise 1.2: Invoke the model to get a response.\n",
+    "        # Hint: Use `model.invoke(...)`\n",
     "        # <solution>\n",
     "        response = model.invoke(chat_history)\n",
     "        # </solution>\n",
@@ -104,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95cc9066",
+   "id": "5fe74a88",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -117,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d521cc05",
+   "id": "6958b664",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -126,10 +136,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6562e1aa",
+   "id": "386978b0",
    "metadata": {},
    "source": [
-    "## Exercise 1.2 (Bonus):\n",
+    "## Exercise 2 (Bonus): Streamlit Chatbot\n",
     "Use streamlit to build a simple chat interface.\n",
     "\n",
     "To test it, deploy the app.py to databricks apps using the UI."
@@ -138,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb8b8ca3",
+   "id": "ee4c0213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a16f2f",
+   "id": "bbc89f03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6268e93",
+   "id": "1a0c2e60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,14 +182,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "345025a1",
+   "id": "02dbb539",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%writefile streamlit_app_01/app.py\n",
-    "# <solution>\n",
     "import streamlit as st\n",
     "from databricks_langchain import ChatDatabricks\n",
+    "from langchain_core.messages import HumanMessage, AIMessage\n",
     "\n",
     "st.title(\"Chatbot\")\n",
     "\n",
@@ -187,7 +197,7 @@
     "    st.session_state.messages = []\n",
     "\n",
     "for message in st.session_state.messages:\n",
-    "    with st.chat_message(\"user\" if message is HumanMessage else \"assistant\"):\n",
+    "    with st.chat_message(\"user\" if isinstance(message, HumanMessage) else \"assistant\"):\n",
     "        st.markdown(message.content)\n",
     "\n",
     "if prompt := st.chat_input(\"What is up?\"):\n",
@@ -197,10 +207,19 @@
     "\n",
     "    with st.chat_message(\"assistant\"):\n",
     "        model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")\n",
+    "        \n",
+    "        # Exercise 2.1: Invoke the model with the message history\n",
+    "        # Hint: input to invoke should be st.session_state.messages\n",
+    "        # <solution>\n",
     "        response = model.invoke(st.session_state.messages)\n",
+    "        # </solution>\n",
+    "        \n",
     "        st.markdown(response.content)\n",
+    "        \n",
+    "        # Exercise 2.2: Append the response to the session state messages\n",
+    "        # <solution>\n",
     "        st.session_state.messages.append(response)\n",
-    "# </solution>"
+    "        # </solution>"
    ]
   }
  ],
