--- a/exercises/08_coding_agent.ipynb
+++ b/exercises/08_coding_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "96ab4dae",
+   "id": "7bb6705d",
    "metadata": {},
    "source": [
     "# Exercise 8: Coding Agent - \"Plan in Code\"\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae8a3c80",
+   "id": "cef9feca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5dd7f33",
+   "id": "863f2bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4773b23",
+   "id": "483bb874",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6d029cd",
+   "id": "a88cb3db",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a52a3cfb",
+   "id": "dd2853b3",
    "metadata": {},
    "source": [
     "## 2. Setup Code Executor\n",
@@ -109,15 +109,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187f4b35",
+   "id": "d4e9256b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exercise 8.2: Initialize LocalPythonExecutor\n",
     "# Inject `search` and `synthesize` into the environment.\n",
-    "# Hint: Use the `additional_authorized_imports` (optional) and pass a dictionary of tools to `send_tools` or initialization if supported.\n",
-    "# Wait, `LocalPythonExecutor` from `smolagents` works by holding state.\n",
-    "# We can inject variables directly into `interpreter.state`.\n",
+    "# Hint: Inject tools into `interpreter.state`.\n",
     "# <solution>\n",
     "interpreter = LocalPythonExecutor(additional_authorized_imports=[\"datetime\", \"math\"])\n",
     "# Inject our custom functions into the global scope of the interpreter\n",
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "911f8dc0",
+   "id": "a15e0863",
    "metadata": {},
    "source": [
     "## 3. Define the Agent Logic\n",
@@ -143,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93dcbf94",
+   "id": "57c0e3d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b0c995",
+   "id": "1fe6e04a",
    "metadata": {},
    "outputs": [],
    "source": [
