--- a/labs/lab_02_advanced.ipynb
+++ b/labs/lab_02_advanced.ipynb
@@ -1,25 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fcb9fc62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "e543bc68",
+   "id": "37e406b4",
    "metadata": {},
    "source": [
     "# Lab 2: Multi-Agent System (MAS) with Progressive Disclosure\n",
     "\n",
     "In this lab, we build a Supervisor/Router agent that manages specialized sub-agents.\n",
     "\n",
-    "**Pattern**: \"Sub-agents as Tools\" with Progressive Disclosure.\n",
-    "\n",
-    "The Main Agent does NOT see all tools at once (which would overwhelm the context).\n",
+    "The Main Agent does NOT see all tools at once (which can start overwhelm the context if we were to keep adding tools).\n",
     "Instead, it has two meta-tools:\n",
     "1. `search_tools(query)`: Finds relevant specialized agents.\n",
     "2. `call_tool(name, task)`: Delegates the task to a specific agent.\n",
@@ -34,18 +24,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2df4914",
+   "id": "3fcc07d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install langchain langgraph duckduckgo-search databricks-langchain smolagents pandas\n",
+    "%pip install langchain langgraph ddgs databricks-langchain smolagents pandas\n",
     "%restart_python"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72fba850",
+   "id": "9f40e373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,24 +46,32 @@
     "from langchain.agents import create_agent\n",
     "from langchain.messages import HumanMessage\n",
     "from langchain.tools import tool\n",
-    "from smolagents import LocalPythonExecutor\n",
     "\n",
     "# Initialize generic model\n",
-    "from llm import model as llm"
+    "from llm import model as llm\n",
+    "from smolagents import LocalPythonExecutor"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8d2d8a12",
-   "metadata": {},
+   "id": "4a5bb948",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## 1. Define Sub-Agents (The Specialists)\n",
     "\n",
     "These are \"factories\" that create a fresh agent instance when called.\n",
-    "This ensures isolation of state between calls.\n",
-    "\n",
-    "\n",
-    "--- Search Agent (ReAct) ---\n",
+    "This ensures isolation of state between calls."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfe90dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@tool\n",
     "def web_search(query: str, max_results: int = 5):\n",
     "    \"\"\"Run a web search\"\"\"\n",
@@ -89,7 +87,6 @@
     "    # </solution>\n",
     "\n",
     "\n",
-    "--- Coding Agent (Code Execution) ---\n",
     "@tool\n",
     "def exec_python(code: str):\n",
     "    \"\"\"\n",
@@ -127,15 +124,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d962517",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "5727cbda",
+   "metadata": {},
    "source": [
     "## 2. Tool Registry & Discovery Mechanism\n",
     "\n",
-    "We define the \"Registry\" of available skills.\n",
-    "\n",
+    "We define the \"Registry\" of available skills."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "682e34ce",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
     "TOOL_REGISTRY = {\n",
     "    \"SearchAgent\": {\n",
     "        \"description\": \"Capable of searching the live internet for up-to-date facts, news, and general knowledge.\",\n",
@@ -198,14 +203,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d23589ad",
-   "metadata": {},
+   "id": "08316170",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## 3. Main Agent (The Supervisor)\n",
     "\n",
-    "The Main Agent only has access to `search_tools` and `call_tool`.\n",
-    "\n",
-    "\n",
+    "The Main Agent only has access to `search_tools` and `call_tool`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73d38232",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def make_main_agent():\n",
     "    system_prompt = (\n",
     "        \"You are a helpful Assistant and Project Manager. \"\n",
@@ -232,14 +246,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01629ab9",
-   "metadata": {},
+   "id": "04594218",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## 4. Evaluation Loop (GAIA Benchmark)\n",
     "\n",
-    "We evaluate the system on the GAIA validation set.\n",
-    "\n",
-    "\n",
+    "We evaluate the system on the GAIA validation set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b9cfdb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def run_gaia_eval():\n",
     "    csv_path = \"gaia_validation_level1.csv\"  # Ensure this file exists in CWD\n",
     "    try:\n",
@@ -306,23 +329,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0afbbf58",
+   "id": "753d75ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if __name__ == \"__main__\":\n",
-    "    # Test Run\n",
-    "    # run_gaia_eval()\n",
+    "# Run eval\n",
+    "# run_gaia_eval()\n",
     "\n",
-    "    # Manual Test\n",
-    "    question = (\n",
-    "        \"What is the 10th Fibonacci number (where F1=0, F2=1) multiplied by \"\n",
-    "        \"the square root of the birth year of the current Microsoft CEO? \"\n",
-    "        \"Use the 'delegate_code_task' tool to perform the calculation using Python. \"\n",
-    "        \"Round the final answer to 2 decimal places.\"\n",
-    "    )\n",
-    "    res = main_agent.invoke({\"messages\": [HumanMessage(question)]})\n",
-    "    print(f\"Agent: {res['messages'][-1].content}\")"
+    "question = (\n",
+    "    \"What is the 10th Fibonacci number (where F1=0, F2=1) multiplied by \"\n",
+    "    \"the square root of the birth year of the current Microsoft CEO? \"\n",
+    "    \"Use the 'delegate_code_task' tool to perform the calculation using Python. \"\n",
+    "    \"Round the final answer to 2 decimal places.\"\n",
+    ")\n",
+    "res = main_agent.invoke({\"messages\": [HumanMessage(question)]})\n",
+    "print(f\"Agent: {res['messages'][-1].content}\")"
    ]
   }
  ],
